--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ Flask==2.3.3
 Jinja2==3.1.2
 Faker==19.6.2
 python-dateutil==2.8.2
-pandas==2.0.3
+# pandas==2.0.3
 cx-Oracle==8.3.0
 PyMySQL==1.1.0
 openai==1.3.5
+psycopg2-binary==2.9.10
+python-dotenv==1.1.1
